fix gap difference between tabs

--- a/src/App.css
+++ b/src/App.css
@@ -257,7 +257,7 @@ a {
 .search {
   /* min-width: 80%; */
   max-width:100%;
-  margin: 0 auto;
+
   /* padding:20px; */
 }
 
